--- a/client/src/pages/checkout/checkout.styles.scss
+++ b/client/src/pages/checkout/checkout.styles.scss
@@ -40,4 +40,16 @@
     font-size: 24px;
     color: red;
   }
+
+  .download-btn{
+    background-color: rgb(40, 146, 207);
+
+    color: white;
+    padding: .5em 1em;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 1px 1px 1px 1px #888;
+    border: none;
+  }
 }
